--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 absl-py==0.6.1
 asn1crypto==0.24.0
 astor==0.7.1
+atomicwrites==1.3.0
+attrs==19.1.0
 backcall==0.1.0
 bleach==3.0.2
 cachetools==3.0.0
@@ -20,9 +22,10 @@ entrypoints==0.2.3
 et-xmlfile==1.0.1
 Flask==1.0.2
 gast==0.2.0
-google-api-python-client==1.7.7
+google-api-python-client==1.7.8
 google-auth==1.6.2
 google-auth-httplib2==0.0.3
+google-auth-oauthlib==0.3.0
 grpcio==1.16.1
 h5py==2.8.0
 httplib2==0.12.0
@@ -45,6 +48,7 @@ MarkupSafe==1.1.0
 mistune==0.8.4
 mkl-fft==1.0.6
 mkl-random==1.0.1
+more-itertools==6.0.0
 msgpack==0.5.6
 msgpack-numpy==0.4.3.2
 murmurhash==1.0.1
@@ -53,16 +57,19 @@ nbformat==4.4.0
 notebook==5.7.2
 numpy==1.15.4
 oauth2client==4.1.3
+oauthlib==3.0.1
 openpyxl==2.6.1
 pandas==0.23.4
 pandocfilters==1.4.2
 parso==0.3.1
 pickleshare==0.7.5
 plac==0.9.6
+pluggy==0.9.0
 preshed==2.0.1
 prometheus-client==0.4.2
 prompt-toolkit==2.0.7
 protobuf==3.6.1
+py==1.8.0
 pyasn1==0.4.5
 pyasn1-modules==0.2.3
 pycparser==2.19
@@ -71,6 +78,9 @@ pyodbc==4.0.25
 pyOpenSSL==18.0.0
 pyreadline==2.1
 PySocks==1.6.8
+pytest==4.3.1
+pytest-html==1.20.0
+pytest-metadata==1.8.0
 python-dateutil==2.7.5
 pytz==2018.7
 pywin32==223
@@ -79,12 +89,15 @@ PyYAML==3.13
 pyzmq==17.1.2
 regex==2018.11.7
 requests==2.20.1
+requests-oauthlib==1.2.0
 rsa==4.0
 scikit-learn==0.20.1
 scipy==1.1.0
+selenium==3.141.0
 Send2Trash==1.5.0
 six==1.11.0
 spacy==2.0.16
+SQLAlchemy==1.3.1
 tensorboard==1.12.0
 tensorflow==1.12.0
 termcolor==1.1.0
